feat(final_tests): working version on M2 need to test on Linux